NEWS for the R Package Luminescence

Changes in version 0.9.0 (, 2018):

  New functions:

         • ‘plot_DRCSummary()’ Summarise all dose-response curves from
           your SAR OSL analysis in one single plot.

  Bugfixes and changes:

         • ‘analyse_baSAR()’

             • Add support for ‘RLum.Analysis’-objects as input,

             • correct odd message informing about removed aliquots
               that had been never removed.
